--- a/docker/Dockerfile.ci_gpu_torch_1.2.0
+++ b/docker/Dockerfile.ci_gpu_torch_1.2.0
@@ -30,6 +30,9 @@ RUN bash /install/ubuntu_install_torch.sh
 COPY install/ubuntu_install_mxnet_gpu.sh /install/ubuntu_install_mxnet_gpu.sh
 RUN bash /install/ubuntu_install_mxnet_gpu.sh
 
+COPY install/ubuntu_install_app_kg.sh /install/ubuntu_install_app_kg.sh
+RUN bash /install/ubuntu_install_app_kg.sh
+
 COPY install/FB15k.zip /data/kg/FB15k.zip
 RUN cd /data/kg && unzip FB15k.zip
 
