--- a/docker/Dockerfile.ci_cpu
+++ b/docker/Dockerfile.ci_cpu
@@ -17,12 +17,12 @@ RUN bash /install/ubuntu_install_conda.sh
 ENV CONDA_ALWAYS_YES="true"
 
 COPY install/conda_env/torch_cpu.yml /install/conda_env/torch_cpu.yml
-RUN conda env create -f /install/conda_env/torch_cpu.yml
+RUN ["/bin/bash", "-c", "conda env create -f /install/conda_env/torch_cpu.yml"]
 
 COPY install/conda_env/mxnet_cpu.yml /install/conda_env/mxnet_cpu.yml
-RUN conda env create -f /install/conda_env/mxnet_cpu.yml
+RUN ["/bin/bash", "-c", "conda env create -f /install/conda_env/mxnet_cpu.yml"]
 
 COPY install/conda_env/tensorflow_cpu.yml /install/conda_env/tensorflow_cpu.yml
-RUN conda env create -f /install/conda_env/tensorflow_cpu.yml
+RUN ["/bin/bash", "-c", "conda env create -f /install/conda_env/tensorflow_cpu.yml"]
 
 ENV CONDA_ALWAYS_YES=
