--- a/docker/install/conda_env/tensorflow_gpu.yml
+++ b/docker/install/conda_env/tensorflow_gpu.yml
@@ -2,7 +2,7 @@ name: tensorflow-ci
 dependencies:
   - cudatoolkit = 10.1
   - pip
-  - pip
+  - pip:
     - tf-nightly-gpu = 2.1.0.dev20191125
     - "git+https://github.com/VoVAllen/tf-dlpack.git"
   - nose
