--- a/docker/install/conda_env/tensorflow_cpu.yml
+++ b/docker/install/conda_env/tensorflow_cpu.yml
@@ -2,7 +2,7 @@ name: tensorflow-ci
 dependencies:
   - pip
   - pip:
-    - tf-nightly = 2.1.0.dev20191125
+    - tf-nightly == 2.1.0.dev20191125
     - "git+https://github.com/VoVAllen/tf-dlpack.git@no_cuda"
   - nose
   - numpy
