--- a/docker/Dockerfile.ci_gpu
+++ b/docker/Dockerfile.ci_gpu
@@ -1,7 +1,6 @@
 # CI docker GPU env
-FROM nvidia/cuda:9.0-cudnn7-devel
+FROM ubuntu:16.04
 
-# Base scripts
 RUN apt-get update --fix-missing
 
 COPY install/ubuntu_install_core.sh /install/ubuntu_install_core.sh
@@ -10,32 +9,22 @@ RUN bash /install/ubuntu_install_core.sh
 COPY install/ubuntu_install_build.sh /install/ubuntu_install_build.sh
 RUN bash /install/ubuntu_install_build.sh
 
-# ANTLR deps
-COPY install/ubuntu_install_java.sh /install/ubuntu_install_java.sh
-RUN bash /install/ubuntu_install_java.sh
-
-COPY install/ubuntu_install_antlr.sh /install/ubuntu_install_antlr.sh
-RUN bash /install/ubuntu_install_antlr.sh
-
 # python
-COPY install/ubuntu_install_conda.sh /install/ubuntu_install_python.sh
-RUN bash /install/ubuntu_install_python.sh
+COPY install/ubuntu_install_conda.sh /install/ubuntu_install_conda.sh
+RUN bash /install/ubuntu_install_conda.sh
 
-COPY install/ubuntu_install_python_package.sh /install/ubuntu_install_python_package.sh
-RUN bash /install/ubuntu_install_python_package.sh
+ENV CONDA_ALWAYS_YES="true"
 
-COPY install/ubuntu_install_torch.sh /install/ubuntu_install_torch.sh
-RUN bash /install/ubuntu_install_torch.sh
+COPY install/conda_env/torch_gpu.yml /install/conda_env/torch_gpu.yml
+RUN ["/bin/bash", "-i", "-c", "conda env create -f /install/conda_env/torch_gpu.yml"]
 
-COPY install/ubuntu_install_mxnet_gpu.sh /install/ubuntu_install_mxnet_gpu.sh
-RUN bash /install/ubuntu_install_mxnet_gpu.sh
+COPY install/conda_env/mxnet_gpu.yml /install/conda_env/mxnet_gpu.yml
+RUN ["/bin/bash", "-i", "-c", "conda env create -f /install/conda_env/mxnet_gpu.yml"]
 
-COPY install/ubuntu_install_tensorflow.sh /install/ubuntu_install_tensorflow.sh
-RUN bash /install/ubuntu_install_tensorflow.sh
+COPY install/conda_env/tensorflow_gpu.yml /install/conda_env/tensorflow_gpu.yml
+RUN ["/bin/bash", "-i", "-c", "conda env create -f /install/conda_env/tensorflow_gpu.yml"]
 
-COPY install/ubuntu_install_tfdlpack_gpu.sh /install/ubuntu_install_tfdlpack_gpu.sh
-RUN bash /install/ubuntu_install_tfdlpack_gpu.sh
-
+ENV CONDA_ALWAYS_YES=
 
 # Environment variables
 ENV PATH=/usr/local/nvidia/bin:${PATH}
