--- a/docker/Dockerfile.ci_cpu
+++ b/docker/Dockerfile.ci_cpu
@@ -25,3 +25,5 @@ COPY install/conda_env/tensorflow_cpu.yml /install/conda_env/tensorflow_cpu.yml
 RUN ["/bin/bash", "-i", "-c", "conda env create -f /install/conda_env/tensorflow_cpu.yml"]
 
 ENV CONDA_ALWAYS_YES=
+
+COPY install/bash_profile ~/.bash_profile
