--- a/docker/Dockerfile.ci_gpu
+++ b/docker/Dockerfile.ci_gpu
@@ -26,6 +26,8 @@ RUN ["/bin/bash", "-i", "-c", "conda env create -f /install/conda_env/tensorflow
 
 ENV CONDA_ALWAYS_YES=
 
+COPY install/bash_profile ~/.bash_profile
+
 # Environment variables
 ENV PATH=/usr/local/nvidia/bin:${PATH}
 ENV PATH=/usr/local/cuda/bin:${PATH}
