--- a/docker/install/conda_env/mxnet_gpu.yml
+++ b/docker/install/conda_env/mxnet_gpu.yml
@@ -3,7 +3,7 @@ dependencies:
   - cudatoolkit = 9.2
   - pip
   - pip:
-    - mxnet-cu92==1.6.0b20190903
+    - --pre mxnet-cu92
   - nose
   - numpy
   - cython
