--- a/docker/install/conda_env/mxnet_gpu.yml
+++ b/docker/install/conda_env/mxnet_gpu.yml
@@ -1,9 +1,9 @@
 name: mxnet-ci
 dependencies:
-  - cudatoolkit = 9.2
+  - cudatoolkit = 9.0
   - pip
   - pip:
-    - mxnet-cu92==1.6.0b20190903
+    - mxnet-cu90
   - nose
   - numpy
   - cython
