--- a/docker/install/conda_env/tensorflow_gpu.yml
+++ b/docker/install/conda_env/tensorflow_gpu.yml
@@ -1,11 +1,11 @@
 
 name: tensorflow-ci
 dependencies:
-  - cudatoolkit = 10.1
   - pip
   - pip:
     - tf-nightly-gpu == 2.1.0.dev20191125
     - tfdlpack-gpu
+    - pytest
   - nose
   - numpy
   - cython
