--- a/docker/install/conda_env/torch_gpu.yml
+++ b/docker/install/conda_env/torch_gpu.yml
@@ -3,9 +3,11 @@ channels:
   - pytorch
 dependencies:
   - python = 3.6
-  - pytorch = 1.0.1
-  - cudatoolkit = 9.2
   - pip
+  - pip:
+    - torch
+    - torchvision
+    - pytest
   - torchvision
   - nose
   - numpy
