--- a/docker/Dockerfile.ci_cpu
+++ b/docker/Dockerfile.ci_cpu
@@ -1,5 +1,6 @@
 # CI docker CPU env
 # Adapted from github.com/dmlc/tvm/docker/Dockerfile.ci_cpu
+# CI docker CPU env
 FROM ubuntu:16.04
 
 RUN apt-get update --fix-missing
@@ -11,20 +12,18 @@ COPY install/ubuntu_install_build.sh /install/ubuntu_install_build.sh
 RUN bash /install/ubuntu_install_build.sh
 
 # python
-COPY install/ubuntu_install_python.sh /install/ubuntu_install_python.sh
-RUN bash /install/ubuntu_install_python.sh
+COPY install/ubuntu_install_conda.sh /install/ubuntu_install_conda.sh
+RUN bash /install/ubuntu_install_conda.sh
 
-COPY install/ubuntu_install_python_package.sh /install/ubuntu_install_python_package.sh
-RUN bash /install/ubuntu_install_python_package.sh
+ENV CONDA_ALWAYS_YES="true"
 
-COPY install/ubuntu_install_torch.sh /install/ubuntu_install_torch.sh
-RUN bash /install/ubuntu_install_torch.sh
+COPY install/conda_env/torch_cpu.yml /install/conda_env/torch_cpu.yml
+RUN ["/bin/bash", "-i", "-c", "conda env create -f /install/conda_env/torch_cpu.yml"]
 
-COPY install/ubuntu_install_mxnet_cpu.sh /install/ubuntu_install_mxnet_cpu.sh
-RUN bash /install/ubuntu_install_mxnet_cpu.sh
+COPY install/conda_env/tensorflow_cpu.yml /install/conda_env/tensorflow_cpu.yml
+RUN ["/bin/bash", "-i", "-c", "conda env create -f /install/conda_env/tensorflow_cpu.yml"]
 
-COPY install/ubuntu_install_tensorflow.sh /install/ubuntu_install_tensorflow.sh
-RUN bash /install/ubuntu_install_tensorflow.sh
+COPY install/conda_env/mxnet_cpu.yml /install/conda_env/mxnet_cpu.yml
+RUN ["/bin/bash", "-i", "-c", "conda env create -f /install/conda_env/mxnet_cpu.yml"]
 
-COPY install/ubuntu_install_tfdlpack_cpu.sh /install/ubuntu_install_tfdlpack_cpu.sh
-RUN bash /install/ubuntu_install_tfdlpack_cpu.sh
+ENV CONDA_ALWAYS_YES=
