--- a/docker/install/conda_env/kg_cpu.yml
+++ b/docker/install/conda_env/kg_cpu.yml
@@ -1,8 +1,10 @@
-name: mxnet-ci
+name: kg-ci
 dependencies:
   - python=3.6.9
   - pip
   - pip:
+    - torch
+    - torchvision
     - mxnet
     - pytest
   - nose
