--- a/docker/install/conda_env/tensorflow_cpu.yml
+++ b/docker/install/conda_env/tensorflow_cpu.yml
@@ -1,9 +1,11 @@
 name: tensorflow-ci
 dependencies:
+  - python=3.6.9
   - pip
   - pip:
-    - tf-nightly == 2.1.0.dev20191125
+    - tensorflow==2.1.0rc1
     - tfdlpack
+    - pytest
   - nose
   - numpy
   - cython
