another way of building metis.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,8 +132,10 @@ list(APPEND DGL_LINKER_LIBS dmlc)
 set(GOOGLE_TEST 0) # Turn off dmlc-core test
 
 # For distributed
-execute_process(COMMAND cd third_party/METIS; make config i64=1)
-add_subdirectory("third_party/METIS")
+set(GKLIB_PATH "third_party/METIS/GKlib")
+include(${GKLIB_PATH}/GKlibSystem.cmake)
+include_directories(${GKLIB_PATH})
+add_subdirectory("third_party/METIS/libmetis/")
 list(APPEND DGL_LINKER_LIBS metis)
 
 target_link_libraries(dgl ${DGL_LINKER_LIBS} ${DGL_RUNTIME_LINKER_LIBS})
