--- a/apps/life_sci/docker/Dockerfile.ci_cpu
+++ b/apps/life_sci/docker/Dockerfile.ci_cpu
@@ -1,1 +1,6 @@
-FROM dgllib/dgl-ci-cpu:conda
+From dgllib/dgl-sagemaker-cpu:dgl_0.4_pytorch_1.2.0_rdkit
+
+RUN pip uninstall -y scikit-learn
+RUN pip install scikit-learn==0.22.2
+RUN pip uninstall -y pandas
+RUN pip install pandas==0.25.1
