--- a/docker/install/conda_env/tensorflow_gpu.yml
+++ b/docker/install/conda_env/tensorflow_gpu.yml
@@ -1,17 +1,16 @@
-
 name: tensorflow-ci
 dependencies:
   - python=3.6.9
   - pip
   - pip:
-    - tensorflow-gpu==2.2.0rc1
+    - tensorflow==2.2.0rc1
     - pytest
-  - nose
-  - numpy
-  - cython
-  - scipy
-  - networkx
-  - matplotlib
-  - nltk
-  - requests[security]
-  - tqdm
+    - nose
+    - numpy
+    - cython
+    - scipy
+    - networkx
+    - matplotlib
+    - nltk
+    - requests[security]
+    - tqdm
