--- a/apps/life_sci/docker/Dockerfile.ci_cpu
+++ b/apps/life_sci/docker/Dockerfile.ci_cpu
@@ -4,3 +4,5 @@ RUN pip uninstall -y scikit-learn
 RUN pip install scikit-learn==0.22.2
 RUN pip uninstall -y pandas
 RUN pip install pandas==0.25.1
+RUN pip uninstall -y dgl
+RUN pip install --pre dgl
