--- a/apps/life_sci/docker/Dockerfile.ci_gpu
+++ b/apps/life_sci/docker/Dockerfile.ci_gpu
@@ -4,3 +4,5 @@ RUN pip uninstall -y scikit-learn
 RUN pip install scikit-learn==0.22.2.post1
 RUN pip uninstall -y pandas
 RUN pip install pandas==0.24.2
+RUN pip uninstall -y dgl-cu100
+RUN pip install --pre dgl-cu101
