--- a/apps/life_sci/conda/dgllife/meta.yaml
+++ b/apps/life_sci/conda/dgllife/meta.yaml
@@ -15,9 +15,9 @@ requirements:
     - cython
   run:
     - python
-    - requests >=2.22.0
-    - scikit-learn >=0.22.2
-    - pandas >=0.24.2
+    - requests
+    - scikit-learn
+    - pandas
     - tqdm
 
 test:
