--- a/docker/install/conda_env/tensorflow_gpu.yml
+++ b/docker/install/conda_env/tensorflow_gpu.yml
@@ -4,6 +4,7 @@ dependencies:
   - pip
   - pip:
     - tensorflow==2.2.0rc1
+    # - tf-nightly==2.2.0.dev20200327
     - tfdlpack-gpu
     - pytest
     - nose
